# OpenGLRepo

./: CMakeLists.txt  README.md  main.cpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
